# openfx-gmic

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  COPYING  Makefile  README  README.md  gmic_plugin.cpp
Common/: RFX_FileUtils.h  RFX_OFX_Utils.h  RFX_Parameter.h  RFX_StringUtils.cpp  RFX_StringUtils.h  RFX_Utils.h  gmic_parser.cpp  gmic_parser.h
GMIC.xcodeproj/: project.pbxproj
GMIC_OFX/: GMICK.ntp  Makefile
GMIC_OFX/GMIC_OFX.xcodeproj/: project.pbxproj
Helpers/: RFX_AE_Utils.h  RFX_FileUtils.cpp  RFX_FileUtils.h  RFX_OFX_Utils.cpp  RFX_OFX_Utils.h  RFX_Parameter.h  RFX_StringUtils.cpp  RFX_StringUtils.h  RFX_Utils.h  gmic_parser.cpp  gmic_parser.h
Plugin/: GMIC.cpp  Makefile  Makefile.master  gmic_openfx.cpp
